--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -6,5 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.115.12",
+    "matplotlib>=3.10.1",
+    "openpyxl>=3.1.5",
     "pandas>=2.2.3",
+    "pyarrow>=19.0.1",
 ]
