--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -5,6 +5,7 @@ description = "API Server"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "colorlog>=6.9.0",
     "fastapi[standard]>=0.115.12",
     "matplotlib>=3.10.1",
     "openpyxl>=3.1.5",
