--- a/client/pyproject.toml
+++ b/client/pyproject.toml
@@ -5,5 +5,8 @@ description = "Client Library"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "colorlog>=6.9.0",
+    "httpx>=0.28.1",
+    "rich>=14.0.0",
     "typer>=0.15.2",
 ]
