--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -13,7 +13,7 @@ RUN --mount=type=cache,target=/root/.cache/uv \
     --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
     uv sync --frozen --no-install-project
 
-ADD ../../be-hiring-challenge.bak/server /app
+ADD . /app
 
 RUN --mount=type=cache,target=/root/.cache/uv \
     uv sync --frozen
