--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,21 +1,21 @@
-FROM python:3.12-alpine3.21
+FROM python:3.13-slim-bookworm
 
 COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
 
-RUN addgroup -S app && adduser -S app -G app -h /app
-
-USER app
+RUN adduser --system --group --home /var/lib/app app
 
 WORKDIR /app
 
-RUN --mount=type=cache,target=/root/.cache/uv \
+RUN --mount=type=cache,target=.cache/uv \
     --mount=type=bind,source=uv.lock,target=uv.lock \
     --mount=type=bind,source=pyproject.toml,target=pyproject.toml \
     uv sync --frozen --no-install-project
 
 ADD . /app
 
-RUN --mount=type=cache,target=/root/.cache/uv \
+RUN --mount=type=cache,target=.cache/uv \
     uv sync --frozen
+
+USER app
 
 CMD ["/app/.venv/bin/uvicorn", "main:app"]
